apps/hello-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  labels:
    app.kubernetes.io/name: hello-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hello-app
  ports:
    - name: http
      port: 8080
      targetPort: http
