apps/hello-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app
  labels:
    app.kubernetes.io/part-of: idp
spec:
  ingressClassName: nginx
  rules:
    - host: hello-app.idp.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-app
                port:
                  number: 8080
